--- a/vxquery-benchmark/pom.xml
+++ b/vxquery-benchmark/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.vxquery</groupId>
         <artifactId>apache-vxquery</artifactId>
-        <version>0.6-SNAPSHOT</version>
+        <version>0.6</version>
     </parent>
 
     <artifactId>apache-vxquery-benchmark</artifactId>
