--- a/vxquery-cli/pom.xml
+++ b/vxquery-cli/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.vxquery</groupId>
         <artifactId>apache-vxquery</artifactId>
-        <version>0.6-SNAPSHOT</version>
+        <version>0.6</version>
     </parent>
 
     <artifactId>apache-vxquery-cli</artifactId>
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>org.apache.vxquery</groupId>
             <artifactId>apache-vxquery-core</artifactId>
-            <version>0.6-SNAPSHOT</version>
+            <version>0.6</version>
             <scope>compile</scope>
         </dependency>
 
