--- a/vxquery-server/pom.xml
+++ b/vxquery-server/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.vxquery</groupId>
         <artifactId>apache-vxquery</artifactId>
-        <version>0.6-SNAPSHOT</version>
+        <version>0.6</version>
     </parent>
 
     <artifactId>apache-vxquery-server</artifactId>
@@ -140,7 +140,7 @@
         <dependency>
             <groupId>org.apache.vxquery</groupId>
             <artifactId>apache-vxquery-core</artifactId>
-            <version>0.6-SNAPSHOT</version>
+            <version>0.6</version>
         </dependency>
 
         <dependency>
